--- a/src/style/style.css
+++ b/src/style/style.css
@@ -130,6 +130,12 @@ p {
   border-radius: 1em;
 }
 
+@supports (scrollbar-color: red blue) {
+  * {
+    scrollbar-color: #00c3c9 #494949;
+  }
+}
+
 .player-container {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
